fix:dark mode optimization

--- a/src/Components/ElevatorButton/ElevatorButton.css
+++ b/src/Components/ElevatorButton/ElevatorButton.css
@@ -13,3 +13,11 @@
   opacity: 1;
   bottom: 6rem;
 }
+      
+
+@media (prefers-color-scheme: dark) {
+  .elevator-button{
+    background-color: #333 !important;
+    color: #fff !important;
+  }
+}
