--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,3 +26,5 @@
     display: none;
   }
 }
+@media (prefers-color-scheme: dark) {
+}
